// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1urwgm2-23 jNjdUz"
  >
    <div
      class="Ellipsis-jiq0k6-0 hkAFf"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="styled__StyledStatsBar-sc-1urwgm2-23 jNjdUz"
  >
    <div
      class="Ellipsis-jiq0k6-0 hkAFf"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="styled__PaddedDiv-sc-1urwgm2-1 dnoNRj"
  >
    <table
      class="styled__StyledTable-sc-1urwgm2-37 dwBGyp"
    >
      <tbody
        class="styled__StyledTBody-sc-1urwgm2-38 gKLgJi"
      >
        <tr
          class="styled__StyledAlteringTr-sc-1urwgm2-40 buiEwI"
        >
          <td
            class="styled__StyledStrongTd-sc-1urwgm2-41 dtYHNj"
          >
            Server version
          </td>
          <td
            class="styled__StyledTd-sc-1urwgm2-42 diFYWW"
          >
            xx1
          </td>
        </tr>
        <tr
          class="styled__StyledAlteringTr-sc-1urwgm2-40 buiEwI"
        >
          <td
            class="styled__StyledStrongTd-sc-1urwgm2-41 dtYHNj"
          >
            Server address
          </td>
          <td
            class="styled__StyledTd-sc-1urwgm2-42 diFYWW"
          >
            xx2
          </td>
        </tr>
        <tr
          class="styled__StyledAlteringTr-sc-1urwgm2-40 buiEwI"
        >
          <td
            class="styled__StyledStrongTd-sc-1urwgm2-41 dtYHNj"
          >
            Query
          </td>
          <td
            class="styled__StyledTd-sc-1urwgm2-42 diFYWW"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="styled__StyledAlteringTr-sc-1urwgm2-40 buiEwI"
        >
          <td
            class="styled__StyledStrongTd-sc-1urwgm2-41 dtYHNj"
          >
            Summary
            <div
              class="styled__StyledExpandable-sc-1urwgm2-39 cbruOH fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="styled__StyledTd-sc-1urwgm2-42 diFYWW"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="styled__StyledAlteringTr-sc-1urwgm2-40 buiEwI"
        >
          <td
            class="styled__StyledStrongTd-sc-1urwgm2-41 dtYHNj"
          >
            Response
            <div
              class="styled__StyledExpandable-sc-1urwgm2-39 cbruOH fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="styled__StyledTd-sc-1urwgm2-42 diFYWW"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
